Improve TCSObject encapsulation and performance
Ensure that members of TCSObject implementations are really immutable.
At the same time, avoid creating redundant objects, including copies and
unmodifiable views for members ad hoc and possibly repeatedly.

Also adjust return types for a few with-methods to allow fluent calls.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>